Added various materials

--- a/5-Sharing_Analyses.ipynb
+++ b/5-Sharing_Analyses.ipynb
@@ -234,14 +234,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@pn.depends(year.param.value, metric.param.value)\n",
+    "@pn.depends(year, metric)\n",
     "def average(year, metric):\n",
     "    idx = auto['yr'] == year\n",
-    "    return auto.loc[idx, metric].hvplot.kde(width=800)\n",
+    "    values = auto[metric]\n",
+    "    return auto.loc[idx, metric].hvplot.kde(width=800, xlim=(values.min(), values.max()))\n",
     "\n",
-    "average_pane = pn.Column(year,\n",
-    "                         pn.Row(average, metric)\n",
-    "                        )\n",
+    "average_pane = pn.Column(\n",
+    "    year, pn.Row(average, metric)\n",
+    ")\n",
     "average_pane"
    ]
   },
@@ -310,26 +311,6 @@
    "outputs": [],
    "source": [
     "dashboard.servable();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You'll notice that the `anaconda-project.yml` contains the following command. Click the `Deploy` button at the top right of Anaconda Enterprise to initiate the deployment.\n",
-    "\n",
-    "```yaml\n",
-    "commands:\n",
-    "  auto-dashboard:\n",
-    "    unix: panel serve 4-Panels.ipynb\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*It will take between 4 and 6 minutes to initialize.*"
    ]
   }
  ],
