--- a/0-Overview.ipynb
+++ b/0-Overview.ipynb
@@ -6,24 +6,14 @@
    "source": [
     "# Overview\n",
     "\n",
-    "This course is a very quick overview of data analysis in Python, it is not meant as an in-depth tutorial but as a quick primer to get you started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Introduction to Jupyter notebooks (10-15 minutes)\n",
+    "This course is a very quick overview of data analysis in Python, it is not meant as an in-depth tutorial but as a quick primer to get you started and expose you to some of the most important concepts and libraries.\n",
+    "\n",
+    "1. Introduction to Jupyter notebooks (10 minutes)\n",
     "2. What is data? (15 minutes)\n",
-    "3. Exploring and analysing data. (30-45 minutes)\n",
+    "3. Exploring and analysing data. (15 minutes)\n",
     "4. Visualizing data (30-45 minutes)\n",
-    "5. Sharing analyses (15-20 minutes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "5. Sharing analyses (30-45 minutes)\n",
+    "\n",
     "Libraries used:\n",
     "    \n",
     "* [Pandas](https://pandas.pydata.org/): The library for working with tabular data in Python \n",
