--- a/2-What_is_Data.ipynb
+++ b/2-What_is_Data.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This seems like a very simple question, but what is data in a computer really? To a computer everything that can be represented as a string of bits is considered data whether that is a numbers, text, to audio and video. For data scientists and business analysts what we refer to as data is usually just a bunch of tables and that is what we will be focusing on here.\n",
     "\n",
-    "Almost everyone here will be familiar with Excel, but few of us think much about the way data is organized. This becomes much more important when we want to interact with data programatically."
+    "Almost everyone here will be familiar with Excel, but the way data is organized in an Excel sheet is often very different to the organization that is needed when working with the data programmatically."
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## Tidy data vs wide data vs messy data\n",
     "\n",
-    "In data science we therefore have specific terminology for different ways of laying out data. The most common of which is **tidy** data:\n",
+    "In data science we therefore have specific terminology for different ways of laying out data. The most common and convenient of which is **tidy** data:\n",
     "\n",
     "<img src=\"https://d33wubrfki0l68.cloudfront.net/6f1ddb544fc5c69a2478e444ab8112fb0eea23f8/91adc/images/tidy-1.png\" width=50%>\n",
     "\n",
@@ -31,13 +31,14 @@
     "2. Easy to analyse by subsetting or grouping data by some column(s)\n",
     "3. Consistent data formats make it easier to reason about\n",
     "\n",
-    "**Wide** data on the other hand is very common when working in Excel, e.g. how often have you seen something like this:\n",
+    "**Wide** data on the other hand is very common when working in Excel, because it is visually easier to scan for some value. Take a look at this diagram for instance:\n",
     "\n",
     "<img src=\"https://d33wubrfki0l68.cloudfront.net/3aea19108d39606bbe49981acda07696c0c7fcd8/2de65/images/tidy-9.png\" width=70%>\n",
     "\n",
-    "<center> Tidy data: Difference between wide data (table 4) and tidy data. (<a href=\"https://r4ds.had.co.nz/tidy-data.html\">Source: Hadley Wickham: R for Data Science</a>)</center>\n",
+    "<center>Wide vs Tidy Data: Difference between wide data (table 4) and tidy data. (<a href=\"https://r4ds.had.co.nz/tidy-data.html\">Source: Hadley Wickham: R for Data Science</a>)</center>\n",
     "\n",
-    "Sadly a lot of data is **messy** and doesn't conform to either format, transforming this kind of data sadly takes up a lot of peoples time and there are no good solutions."
+    "\n",
+    "Sadly a lot of data is **messy** and doesn't conform to either format, transforming this kind of data sadly takes up a lot of peoples time and there are no good solutions. Learning how to transform data from one format to another is a major part of being a confident data science practioner but it is out of scope in this tutorial."
    ]
   },
   {
@@ -46,221 +47,21 @@
    "source": [
     "## Common data formats\n",
     "\n",
-    "* CSV\n",
+    "The most common tabular data formats you will come across include: \n",
+    "\n",
+    "* CSV/TSV\n",
     "* Excel files\n",
-    "* SQL (or other databases)"
+    "* SQL (or other databases)\n",
+    "* Parquet\n",
+    "\n",
+    "This is where pandas comes in, it will load data from all these different formats and allow us to work with them from within Python:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mpg</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model_year</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>3504</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevrolet chevelle malibu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>3693</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>buick skylark 320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3436</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>plymouth satellite</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3433</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>amc rebel sst</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>3449</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford torino</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393</th>\n",
-       "      <td>27.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>86</td>\n",
-       "      <td>2790</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford mustang gl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>52</td>\n",
-       "      <td>2130</td>\n",
-       "      <td>24.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>2</td>\n",
-       "      <td>vw pickup</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>84</td>\n",
-       "      <td>2295</td>\n",
-       "      <td>11.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>dodge rampage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>28.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>79</td>\n",
-       "      <td>2625</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford ranger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>82</td>\n",
-       "      <td>2720</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevy s-10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>398 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      mpg  cylinders  displacement horsepower  weight  acceleration  \\\n",
-       "0    18.0          8         307.0        130    3504          12.0   \n",
-       "1    15.0          8         350.0        165    3693          11.5   \n",
-       "2    18.0          8         318.0        150    3436          11.0   \n",
-       "3    16.0          8         304.0        150    3433          12.0   \n",
-       "4    17.0          8         302.0        140    3449          10.5   \n",
-       "..    ...        ...           ...        ...     ...           ...   \n",
-       "393  27.0          4         140.0         86    2790          15.6   \n",
-       "394  44.0          4          97.0         52    2130          24.6   \n",
-       "395  32.0          4         135.0         84    2295          11.6   \n",
-       "396  28.0          4         120.0         79    2625          18.6   \n",
-       "397  31.0          4         119.0         82    2720          19.4   \n",
-       "\n",
-       "     model_year  origin                       name  \n",
-       "0            70       1  chevrolet chevelle malibu  \n",
-       "1            70       1          buick skylark 320  \n",
-       "2            70       1         plymouth satellite  \n",
-       "3            70       1              amc rebel sst  \n",
-       "4            70       1                ford torino  \n",
-       "..          ...     ...                        ...  \n",
-       "393          82       1            ford mustang gl  \n",
-       "394          82       2                  vw pickup  \n",
-       "395          82       1              dodge rampage  \n",
-       "396          82       1                ford ranger  \n",
-       "397          82       1                 chevy s-10  \n",
-       "\n",
-       "[398 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -276,20 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function pandas.io.excel._base.read_excel(io, sheet_name=0, header=0, names=None, index_col=None, usecols=None, squeeze=False, dtype=None, engine=None, converters=None, true_values=None, false_values=None, skiprows=None, nrows=None, na_values=None, keep_default_na=True, verbose=False, parse_dates=False, date_parser=None, thousands=None, comment=None, skip_footer=0, skipfooter=0, convert_float=True, mangle_dupe_cols=True, **kwds)>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.read_excel"
    ]
