--- a/3-Exploring_Data.ipynb
+++ b/3-Exploring_Data.ipynb
@@ -90,9 +90,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selecting rows\n",
+    "### Selecting by index\n",
     "\n",
-    "To select a particular row in a dataframe we can use the `.iloc` accessor which allows use to slice the dataframe by number:"
+    "The index of a DataFrame is often meaningful, therefore the standard indexing behavior works on the index:"
    ]
   },
   {
@@ -101,7 +101,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpg.iloc[0:10]"
+    "mpg[5:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selecting by integer location\n",
+    "\n",
+    "Much like Excel numbers rows by number and columns by letter, pandas allows indexing both rows and columns by number. To select a particular row and/or column in a dataframe we can use the `.iloc` accessor which allows use to slice the dataframe by number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpg.iloc[0:10, [1, 3]]"
    ]
   },
   {
