--- a/4-Plotting_Data.ipynb
+++ b/4-Plotting_Data.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Like before we will import pandas and make a simple dataset containing a few timeseries:"
+    "We will start by importing pandas and make a simple dataset containing a few timeseries:"
    ]
   },
   {
@@ -99,6 +99,31 @@
    "metadata": {},
    "source": [
     "There are several plot types available using the `.hvplot.<type>()` methods. See [hvPlot reference gallery](https://hvplot.pyviz.org/reference/index.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Customizing the plot\n",
+    "\n",
+    "hvPlot tries to chose sensible defaults for plots however you can adjust the `width` and `height` of a plot by setting these as options. You can also make the plot responsive to fit the entire screen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.hvplot(responsive=True, min_height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to options you can see when typing `df.hvplot.<type>(Shift+Tab)` you can see the full list of options here: https://hvplot.pyviz.org/user_guide/Customization.html"
    ]
   },
   {
@@ -309,6 +334,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And plot the 'Total Population' ``by`` country:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -318,12 +350,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here the `by` variable overlays the line plot for each country. In a bar chart on the other hand it will group each bar:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpg.groupby(['yr', 'origin']).mean().hvplot.bar('yr', 'mpg', by='origin', rot=90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we have multiple `y` variables we want to plot we can also generate a separate plot for each of these by leaving ``y`` unspecified and using the subplots option:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mpg.groupby('origin').mean().hvplot.bar('origin', subplots=True, shared_axes=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another option for subsetting data is to use the ``groupby`` argument, instead of overlaying or subplotting this will generate widgets to select between the different values of the specified column(s):"
    ]
   },
   {
@@ -340,13 +402,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a bar plot of the 'Urban population (% of total)' by 'Year' with a widget to select between 'CountryName':"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "mpg.groupby(['yr', 'origin']).mean().hvplot.bar('yr', 'mpg', by='origin', rot=90)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
