--- a/0-Overview.ipynb
+++ b/0-Overview.ipynb
@@ -9,7 +9,7 @@
     "This course is a very quick overview of data analysis in Python, it is not meant as an in-depth tutorial but as a quick primer to get you started and expose you to some of the most important concepts and libraries.\n",
     "\n",
     "1. Introduction to Jupyter notebooks (10 minutes)\n",
-    "2. What is data? (15 minutes)\n",
+    "2. Tabular Data (15 minutes)\n",
     "3. Exploring and analysing data. (15 minutes)\n",
     "4. Visualizing data (30-45 minutes)\n",
     "5. Sharing analyses (30-45 minutes)\n",
