--- a/2-Tabular_Data.ipynb
+++ b/2-Tabular_Data.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.read_csv('./mpg.csv')"
+    "pd.read_csv('./auto-mpg.csv')"
    ]
   },
   {
